# SentimentScoutV2

./: .replit  demo_csv2.py  pyproject.toml  requirements.txt
