[tool.poetry]
name = "repl-nix-sentimentscoutv2"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_sentimentscoutv2"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.2"
matplotlib = "^3.8.3"
nltk = "^3.8.1"
numpy = "^1.26.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
